# Hello-QT

./: CMakeCache.txt  CMakeLists.txt  Giteye.pro  Giteye.pro.autosave  appveyor.yml  appveyor.yml.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
